hard-gists/2691939/run.log
=== Docker Run Log for 2691939 ===
Started at: Mi 29. Okt 13:11:38 CET 2025

[2025-10-29 13:11:39] START: Running container for 2691939
[2025-10-29 13:11:39] SUCCESS: Container de310204e50c62b4076bdc0fcbff8964494aaceb5ee4d7741fa07f4bd81b4df9 started for 2691939
=== Container logs for 2691939 ===
  File "/snippet.py", line 43
    print val
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2691939 ===
[2025-10-29 13:11:41] INFO: Container de310204e50c62b4076bdc0fcbff8964494aaceb5ee4d7741fa07f4bd81b4df9 has stopped
